fixed home page to call get-comments only when state is empty